--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -1,5 +1,5 @@
 <h1 matDialogTitle>{{ data.title }}</h1>
-{{ "ADD" | translate }} {{ "BRAND" | translate }}
+
 <form [formGroup]="itemForm" (ngSubmit)="submit($event)">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
     <div fxFlex="50" class="pr-1">
@@ -14,7 +14,7 @@
     </div>
     <div>
       <mat-form-field>
-        <mat-label>Brand Category</mat-label>
+        <mat-label>Brand Type</mat-label>
         <mat-select [formControl]="itemForm.controls['brandcategory']" onchange="">
           <mat-option *ngFor="let topping of toppingList" [value]="topping">{{
             topping
@@ -23,29 +23,22 @@
       </mat-form-field>
     </div>
 
-    <div fxFlex="50" class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-          matInput
-          name="title"
-          [formControl]="itemForm.controls['title']"
-          placeholder="Title"
-        />
-      </mat-form-field>
-    </div>
 
-    <div fxFlex="50" class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-          matInput
-          name="heading"
-          [formControl]="itemForm.controls['heading']"
-          placeholder="Heading"
-        />
+    <div fxFlex="100" class="pr-1">
+
+      <mat-form-field [style.width.px]=327>
+        <mat-label>Tags</mat-label>
+        <mat-select [formControl]="itemForm.controls['tags']" multiple>
+          <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+        </mat-select>
       </mat-form-field>
+
     </div>
+   
+
+    
     <div fxFlex="50" class="pr-1">
-      <mat-form-field>
+      <mat-form-field [style.width.px]=227>
         <mat-label>Parent Category</mat-label>
         <mat-select [formControl]="itemForm.controls['parentcategory']" (selectionChange)="getSubCategories($event.value)">
           <mat-option
@@ -57,11 +50,11 @@
       </mat-form-field>
     </div>
     <div fxFlex="50" class="pr-1">
-      <mat-form-field>
+      <mat-form-field [style.width.px]=227>
         <mat-label>Sub Category</mat-label>
         <mat-select [formControl]="itemForm.controls['subcategory']">
           <mat-option
-            *ngFor="let topping of subcategory"
+            *ngFor="let topping of subcategories"
             [value]="topping"
             >{{ topping }}</mat-option
           >
@@ -69,36 +62,19 @@
       </mat-form-field>
     </div>
 
-    <div fxFlex="50" class="pr-1">
-      <mat-form-field class="example-full-width">
-        <textarea
-          matInput
-          placeholder="Keywords"
-          [formControl]="itemForm.controls['keywords']"
-        ></textarea>
-      </mat-form-field>
-    </div>
-    <div fxFlex="50" class="pr-1">
-      <mat-form-field class="example-full-width">
-        <textarea
-          matInput
-          placeholder="Description"
-          [formControl]="itemForm.controls['description']"
-        ></textarea>
-      </mat-form-field>
+  
+    <div fxFlex="100" class="pr-1">
+      <quill-editor
+      [formControl]="itemForm.controls['description']"
+      theme="snow" 
+      [(ngModel)]="description" 
+      
+      ></quill-editor>
+     
     </div>
 
-    <div fxFlex="50" class="pr-1">
-      <mat-form-field class="example-full-width">
-        <textarea
-          matInput
-          placeholder="Content"
-          [formControl]="itemForm.controls['content']"
-        ></textarea>
-      </mat-form-field>
-    </div>
 
-    <div fxFlex="50" class="pr-1">
+    <div fxFlex="50" class="pr-1" style="margin-top: 90px;">
       <h3>Logo Upload</h3>
       <div class="form-group">
         <input
@@ -129,7 +105,8 @@
         </button>
       </div>
     </div>
-    <div fxFlex="50" class="pr-1">
+
+    <div fxFlex="50" class="pr-1" style="margin-top: 90px;"> 
       <h3>Sidebar Upload</h3>
       <div class="form-group">
         <input
@@ -452,18 +429,19 @@ Requirements
             </mat-form-field>
           </div> 
 
-          <div fxFlex="50"  class="pr-1">
-              <mat-form-field class="full-width">
-                <input
-                matInput
-                name="seo_metadescription"
-                [formControl]="itemForm.controls['seo_metadescription']"
-                placeholder="MetaDescription">
-              </mat-form-field>
-            </div> 
+          <div fxFlex="100" class="pr-1">
+            <quill-editor
+            [formControl]="itemForm.controls['seo_metadescription']"
+            theme="snow" 
+            [(ngModel)]="metadescription" 
+            
+            ></quill-editor>
+           
+          </div>
+      
 
 
-            <div fxFlex="50"  class="pr-1">
+            <div fxFlex="50"  class="pr-1" style="margin-top: 80px;">
                 <mat-form-field class="full-width">
                   <input
                   matInput
@@ -472,16 +450,18 @@ Requirements
                   placeholder="MetaHeading">
                 </mat-form-field>
               </div> 
-              <div fxFlex="50"  class="pr-1">
-                  <mat-form-field class="full-width">
-                    <input
-                    matInput
-                    name="seo_metaheadingdescription"
-                    [formControl]="itemForm.controls['seo_metaheadingdescription']"
-                    placeholder="MetaHeadingDescription">
-                  </mat-form-field>
-                </div> 
-                <div fxFlex="50"  class="pr-1">
+
+              <div fxFlex="100" class="pr-1">
+                <quill-editor
+                [formControl]="itemForm.controls['seo_metaheadingdescription']"
+                theme="snow" 
+                [(ngModel)]="metaheadingdescription" 
+                
+                ></quill-editor>
+               
+              </div>
+
+                <div fxFlex="50"  class="pr-1" style="margin-top: 80px;">
                     <mat-form-field class="example-full-width">
                         <textarea matInput placeholder="Keywords"  [formControl]="itemForm.controls['seo_keywords']"></textarea>
                       </mat-form-field>
