--- a/src/app/views/products/tags/tags.component.html
+++ b/src/app/views/products/tags/tags.component.html
@@ -28,6 +28,11 @@
               {{ row?.description }}
             </ng-template>
           </ngx-datatable-column>
+          <ngx-datatable-column name="Type" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              {{ row?.type }}
+            </ng-template>
+          </ngx-datatable-column>
          
           <ngx-datatable-column name="Actions" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
