--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -24,16 +24,32 @@
     </div>
 
 
-    <div fxFlex="100" class="pr-1">
+    <div fxFlex="50" class="pr-1">
 
-      <mat-form-field [style.width.px]=327>
+      <mat-form-field [style.width.px]=300>
         <mat-label>Tags</mat-label>
         <mat-select [formControl]="itemForm.controls['tags']" multiple>
-          <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+          <mat-option *ngFor="let topping of tags" [value]="topping">{{topping}}</mat-option>
         </mat-select>
       </mat-form-field>
 
     </div>
+
+
+    <div fxFlex="50" class="pr-1">
+
+      <mat-form-field [style.width.px]=227>
+        <mat-label>Slug</mat-label>
+        <input
+        matInput
+        name="username"
+        [formControl]="itemForm.controls['slug']"
+        placeholder="Slug"
+      />
+      </mat-form-field>
+
+    </div>
+   
    
 
     
@@ -147,6 +163,8 @@
         [formGroupName]="pointIndex"
         style="display: flex;  flex-direction: row; justify-content: space-between; margin: 15px;"
       >
+      
+
         <div style="width: 100%;">
           <label>
             Brand Specification
@@ -408,7 +426,7 @@ Requirements
                   </mat-form-field>
                 </div> 
                 <div fxFlex="50"  class="pr-1">
-                    <mat-form-field class="example-full-width">
+                    <mat-form-field class="example-full-width" [style.width.px]=427>
                         <textarea matInput placeholder="Social Media"  
                         [formControl]="itemForm.controls['socialmedia']"></textarea>
                       </mat-form-field>
