--- a/src/app/views/products/managebrands/managebrands.component.html
+++ b/src/app/views/products/managebrands/managebrands.component.html
@@ -32,41 +32,35 @@
               
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Brands" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.brand }}
-            </ng-template>
-          </ngx-datatable-column>
+        
           <ngx-datatable-column name="Metaitle" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.title }}
+              {{ row?.seo_metatitle }}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Heading" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.heading  }}
-            </ng-template>
-          </ngx-datatable-column>
+        
           <ngx-datatable-column name="ParentCategory" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
               {{ row?.parentcategory }}
             </ng-template>
           </ngx-datatable-column>
+
+          <ngx-datatable-column name="SubCategory" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              {{ row?.subcategory }}
+            </ng-template>
+          </ngx-datatable-column>
           <ngx-datatable-column name="Keywords" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.keywords }}
+              {{ row?.seo_keywords }}
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column name="Content" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.content }}
+              {{ row?.description }}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Status" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              <mat-chip mat-sm-chip [color]="'primary'" [selected]="row.isActive">{{row.isParent ? 'parent' : 'child'}}</mat-chip>
-            </ng-template>
-          </ngx-datatable-column>
+        
           <ngx-datatable-column name="Actions" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
               <button mat-icon-button mat-sm-button color="primary" class="mr-1" (click)="openPopUp(row,false,row._id)"><mat-icon>edit</mat-icon></button>
