--- a/src/app/views/products/managebrands/managebrands.component.html
+++ b/src/app/views/products/managebrands/managebrands.component.html
@@ -60,6 +60,12 @@
               {{ row?.description }}
             </ng-template>
           </ngx-datatable-column>
+          <ngx-datatable-column name="Services" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              {{ row?.services }}
+            </ng-template>
+          </ngx-datatable-column>
+        
         
           <ngx-datatable-column name="Actions" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
