--- a/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
+++ b/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
@@ -102,6 +102,8 @@
     </mat-form-field>
   </div>
 
+  
+
 
    <div fxFlex="50"  class="pr-1">
               <mat-form-field>
@@ -113,6 +115,48 @@
                 </select>
               </mat-form-field>
               </div>
+
+              <div
+              formArrayName="specifications"
+              style="width: 100%; padding: 10px; margin: 15px auto;"
+            >
+              <div
+                *ngFor="let item of specifications.controls; let pointIndex = index"
+                [formGroupName]="pointIndex"
+                style="display: flex;  flex-direction: row; justify-content: space-between; margin: 15px;"
+              >
+                <div style="width: 100%;">
+                  <label>
+                    Product Specification
+                    <input
+                      style="border-bottom: 1px grey solid; width: 90%;"
+                      matInput
+                      name="point+'pointIndex'"
+                      formControlName="point"
+                      placeholder="Specification"
+                    />
+                  </label>
+                </div>
+                <button
+                  mat-raised-button
+                  color="primary"
+                  (click)="deleteSellingPoint(pointIndex)"
+                  type="button"
+                >
+                  Delete
+                </button>
+              </div>
+              <button
+                style="margin: 15px; "
+                mat-raised-button
+                color="primary"
+                type="button"
+                (click)="addSellingPoint()"
+              >
+                Add
+              </button>
+            </div>
+               
            
              
               <div fxFlex="100"  class="pr-1">
