--- a/src/app/views/pages/managehome/managehome.component.html
+++ b/src/app/views/pages/managehome/managehome.component.html
@@ -1,6 +1,6 @@
 <div class="m-333">
   <!-- <span fxFlex></span> -->
-  <button mat-raised-button class="mb-05" color="primary" (click)="openPopUp({}, true)">{{"ADD" | translate }} {{"Category" | translate }}</button>
+  <button mat-raised-button class="mb-05" color="primary" (click)="openPopUp({}, true)">{{"ADD" | translate }} {{"Banner" | translate }}</button>
 </div>
 <mat-card class="p-0" [@animate]="{value:'*',params:{y:'50px',delay:'300ms'}}">
   <mat-card-content class="p-0">
@@ -15,7 +15,7 @@
           [rowHeight]="50">
 
           
-          <ngx-datatable-column name="Logo" [flexGrow]="1">
+          <ngx-datatable-column name="Banner" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
               <div class="image-preview mb-3" >
                 <img [src]="linkImg(row?.imagelogo)"  width="42" height="42" />                 
@@ -24,47 +24,14 @@
             </ng-template>
           </ngx-datatable-column>
 
-          <ngx-datatable-column name="Sidebar" [flexGrow]="1">
+         
+        
+          
+        
+        
+          <ngx-datatable-column name="Date" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              <div class="image-preview mb-3" >
-                <img [src]="linkImg(row?.imagesidebar)"  width="42" height="42" />                 
-            </div>
-              
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Brands" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.brands }}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Metaitle" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.metatitle }}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Heading" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.heading  }}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="ParentCategory" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.parentcategory }}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Keywords" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.keywords }}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Content" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row?.content }}
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column name="Status" [flexGrow]="1">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              <mat-chip mat-sm-chip [color]="'primary'" [selected]="row.isActive">{{row.isParent ? 'parent' : 'child'}}</mat-chip>
+              <mat-chip mat-sm-chip [color]="'primary'" >{{row?.date}}</mat-chip>
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column name="Actions" [flexGrow]="1">
