--- a/src/app/views/pages/managehome/managehomepopup/managehomepopup.component.html
+++ b/src/app/views/pages/managehome/managehomepopup/managehomepopup.component.html
@@ -1,81 +1,12 @@
 <h1 matDialogTitle>{{data.title}}</h1>
-{{"ADD" | translate }} {{"CATEGORY" | translate }}
+
   <form [formGroup]="itemForm" (ngSubmit)="submit($event)">
   <div fxLayout="row wrap" fxLayout.lt-sm="column">
-    <div fxFlex="50"  class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-        matInput
-        name="username"
-        [formControl]="itemForm.controls['name']"
-        placeholder="Name">
-      </mat-form-field>
-    </div>
-    <div>
-    <mat-form-field>
-      <mat-label>Brands</mat-label>
-      <mat-select [formControl]="itemForm.controls['brand']" multiple>
-        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
+    
 
-  <div fxFlex="50"  class="pr-1">
-    <mat-form-field class="full-width">
-      <input
-      matInput
-      name="heading"
-     
-      [formControl]="itemForm.controls['metatitle']"
-      placeholder="Metatitle">
-    </mat-form-field>
-
-
-  </div>
 
     <div fxFlex="50"  class="pr-1">
-      <mat-form-field class="full-width">
-        <input
-        matInput
-        name="heading"
-       
-        [formControl]="itemForm.controls['heading']"
-        placeholder="Heading">
-      </mat-form-field>
-
- 
-    </div>
-    <div fxFlex="50"  class="pr-1">
-      <mat-form-field>
-        <mat-label>Parent Category</mat-label>
-        <mat-select [formControl]="itemForm.controls['parentcategory']" >
-          <mat-option *ngFor="let topping of parentCategory" [value]="topping">{{topping}}</mat-option>
-        </mat-select>
-      </mat-form-field>
-        
-      </div>
-
-  
-  
-    <div fxFlex="50"  class="pr-1">
-        <mat-form-field class="example-full-width">
-            <textarea matInput placeholder="Keywords" [formControl]="itemForm.controls['keywords']" ></textarea>
-          </mat-form-field>
-        </div>
-        <div fxFlex="50"  class="pr-1">
-            <mat-form-field class="example-full-width">
-                <textarea matInput placeholder="Description" [formControl]="itemForm.controls['description']" ></textarea>
-              </mat-form-field>
-            </div>
-
-            <div fxFlex="50"  class="pr-1">
-                <mat-form-field class="example-full-width">
-                    <textarea matInput placeholder="Content"  [formControl]="itemForm.controls['content']"></textarea>
-                  </mat-form-field>
-                </div>
-                
-                <div fxFlex="50"  class="pr-1">
-                <h3>Logo Upload</h3>            
+                <h3>Banner Upload</h3>            
                 <div class="form-group">
                     <input type="file" name="image"  style="display: none;" accept="image/*" #logo  (change)="fileProgress1($event)" />
                 </div>
@@ -92,27 +23,8 @@
               
 
               </div>
-              <div fxFlex="50"  class="pr-1">
-                  <h3>Sidebar Upload</h3>            
-                  <div class="form-group">
-                      <input type="file"  style="display: none;" #fileside accept="image/*" name="image" (change)="fileProgress($event)" />
-                  </div>
-                  <div *ngIf="fileUploadProgress">
-                      Upload progress: {{ fileUploadProgress }}
-                  </div>
-                  <div class="image-preview mb-3" *ngIf="previewUrl">
-                      <img [src]="previewUrl"  height="100" />                 
-                  </div>
+              
 
-                  <div class="image-preview mb-3" *ngIf="previewUrl">
-                    <button mat-raised-button color="primary"  type="button" style="margin-top: 10px; margin-left: 10px;" (click)="fileside.click()" >Select Image</button>             
-                </div>
-       
-                
-  
-                </div><br>
-
-                <h1 matDialogTitle>SEO FIELDS</h1>
 
     <div fxFlex="100" class="mt-1">
       <button mat-raised-button color="primary" type="submit" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
