--- a/src/app/views/pages/managehome/managehome.component.html
+++ b/src/app/views/pages/managehome/managehome.component.html
@@ -26,6 +26,11 @@
 
          
         
+          <ngx-datatable-column name="Landing URL" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              <mat-chip mat-sm-chip [color]="'primary'" >{{row?.landingurl}}</mat-chip>
+            </ng-template>
+          </ngx-datatable-column>
           
         
         
