--- a/src/app/views/pages/managebanner/managebanner.component.html
+++ b/src/app/views/pages/managebanner/managebanner.component.html
@@ -1,3 +1,54 @@
-<p>
-  managebanner works!
-</p>
+<div class="m-333">
+  <!-- <span fxFlex></span> -->
+  <button mat-raised-button class="mb-05" color="primary" (click)="openPopUp({}, true)">{{"ADD" | translate }} {{"How IT Works" | translate }}</button>
+</div>
+<mat-card class="p-0" [@animate]="{value:'*',params:{y:'50px',delay:'300ms'}}">
+  <mat-card-content class="p-0">
+    <ngx-datatable
+          class="material ml-0 mr-0"
+          [rows]="items"
+          [columnMode]="'force'"
+          [headerHeight]="50"
+          [footerHeight]="50"
+          [scrollbarH]="true"
+          [limit]="10"
+          [rowHeight]="50">
+
+          
+          <ngx-datatable-column name="Banner" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              <div class="image-preview mb-3" >
+                <img [src]="linkImg(row?.imagelogo)"  width="42" height="42" />                 
+            </div>
+              
+            </ng-template>
+          </ngx-datatable-column>
+
+          <ngx-datatable-column name="Content" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              {{row?.content}}
+            </ng-template>
+          </ngx-datatable-column>
+        
+          <ngx-datatable-column name="Landing URL" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              <mat-chip mat-sm-chip [color]="'primary'" >{{row?.landingurl}}</mat-chip>
+            </ng-template>
+          </ngx-datatable-column>
+          
+        
+        
+          <ngx-datatable-column name="Date" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              <mat-chip mat-sm-chip [color]="'primary'" >{{row?.date}}</mat-chip>
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Actions" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              <button mat-icon-button mat-sm-button color="primary" class="mr-1" (click)="openPopUp(row,false,row._id)"><mat-icon>edit</mat-icon></button>
+              <button mat-icon-button mat-sm-button color="warn" (click)="deleteItem(row._id)"><mat-icon>delete</mat-icon></button>
+            </ng-template>
+          </ngx-datatable-column>
+        </ngx-datatable>
+  </mat-card-content>
+</mat-card>
