--- a/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
+++ b/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
@@ -7,9 +7,27 @@
       <mat-form-field>
         <mat-label>Brand Type</mat-label>
         <mat-select [formControl]="itemForm.controls['brand']" onchange="">
-          <mat-option *ngFor="let topping of items_brands" [value]="topping">{{
-            topping
+          <mat-option *ngFor="let topping of items_brands"  [value]="topping.id + '-'+ topping.name">{{
+            topping.name
           }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+
+    
+
+    <div fxFlex="100">
+      <mat-form-field [style.width.px]=427>
+        <mat-select [formControl]="bankMultiCtrl" placeholder="Districts" [multiple]="true" #multiSelect>
+          <ngx-mat-select-search [formControl]="bankMultiFilterCtrl"
+          
+          placeholderLabel="Find District..." 
+          noEntriesFoundLabel="No matching district found"
+          ></ngx-mat-select-search>
+          <mat-option *ngFor="let bank of filteredBanksMulti | async" [value]="bank">
+            {{bank.name}}
+          </mat-option>
         </mat-select>
       </mat-form-field>
     </div>
@@ -17,27 +35,14 @@
 
     <div fxFlex="100">
       <mat-form-field>
-        <mat-label>State</mat-label>
-        <mat-select [formControl]="itemForm.controls['state']" onchange="">
-          <mat-option *ngFor="let topping of items_brands" [value]="topping">{{
+        <mat-label>Availability</mat-label>
+        <mat-select [formControl]="itemForm.controls['availability']" onchange="">
+          <mat-option *ngFor="let topping of colours" [value]="topping">{{
             topping
           }}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
-
-
-    <div fxFlex="100">
-      <mat-form-field>
-        <mat-label>City</mat-label>
-        <mat-select [formControl]="itemForm.controls['city']" onchange="">
-          <mat-option *ngFor="let topping of items_brands" [value]="topping">{{
-            topping
-          }}</mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-
 
   
 
