--- a/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
+++ b/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
@@ -42,16 +42,22 @@
 
    
     </div>
-   
+    <div fxFlex="100" class="pr-1" style="margin-top: 150px;">
+      <mat-form-field [style.width.px]=427>
+        <mat-select [formControl]="bankMultiCtrl" placeholder="Districts" [multiple]="true" #multiSelect>
+          <ngx-mat-select-search [formControl]="bankMultiFilterCtrl"
+          
+          placeholderLabel="Find Tags..." 
+          noEntriesFoundLabel="No matching tag found"
+          ></ngx-mat-select-search>
+          <mat-option *ngFor="let bank of filteredBanksMulti | async" [value]="bank">
+            {{bank.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
     
-    <div  fxFlex="100"  class="pr-1" style="margin-top: 130px;">
-        <mat-form-field [style.width.px]=327>
-      <mat-label>Tags</mat-label>
-      <mat-select [formControl]="itemForm.controls['tags']"  multiple>
-        <mat-option *ngFor="let topping of items_tags" [value]="topping.name">{{topping.name}}</mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
+    
 
   <div  fxFlex="50"  class="pr-1">
       <mat-form-field >
