--- a/src/app/views/products/manageproducts/manageproducts.component.html
+++ b/src/app/views/products/manageproducts/manageproducts.component.html
@@ -40,7 +40,7 @@
          
           <ngx-datatable-column name="Tag" [flexGrow]="1">
               <ng-template let-row="row" ngx-datatable-cell-template>
-                {{ row?.tags}}
+                {{ row?.tags| tags}}
               </ng-template>
             </ngx-datatable-column>
             <ngx-datatable-column name="Stock" [flexGrow]="1">
