updated business profile

--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -8,6 +8,7 @@
           matInput
           name="username"
           [formControl]="itemForm.controls['name']"
+          (input)="onSearchChange($event.target.value)"
           placeholder="Name"
         />
       </mat-form-field>
