--- a/src/app/views/pages/businessprofile/businesspopup/businesspopup.component.html
+++ b/src/app/views/pages/businessprofile/businesspopup/businesspopup.component.html
@@ -1,5 +1,5 @@
 <h1 matDialogTitle>{{data.title}}</h1>
-{{"ADD" | translate }} {{"PRODUCT" | translate }}
+{{"ADD" | translate }} {{"BUSINESS PROFILE" | translate }}
   <form [formGroup]="itemForm" (ngSubmit)="submit()">
  <div fxLayout="row wrap" fxLayout.lt-sm="column">
 
@@ -9,7 +9,7 @@
       <input
       matInput
       name="title"
-     
+      (input)="onSearchChange($event.target.value)"
       [formControl]="itemForm.controls['title']"
       placeholder="Title">
     </mat-form-field>
@@ -24,6 +24,20 @@
       [formControl]="itemForm.controls['heading']"
       placeholder="Heading">
     </mat-form-field>
+  </div>
+
+
+  <div fxFlex="100"  class="pr-1">
+    <mat-form-field class="full-width">
+      <input
+      matInput
+      name="slug"
+     
+      [formControl]="itemForm.controls['slug']"
+      placeholder="Slug">
+    </mat-form-field>
+
+
   </div>
 
 
@@ -224,6 +238,59 @@
 
               </div><br>
               
+
+              <div fxFlex="100"  class="pr-1" style="margin-top: 140px;"><h2>SEO Fields</h2></div>
+            
+              <div fxFlex="100"  class="pr-1">
+                  <mat-form-field class="full-width">
+                    <input
+                    matInput
+                    name="seo_metatitle"
+                    [formControl]="itemForm.controls['seo_metatitle']"
+                    placeholder="Metatitle">
+                  </mat-form-field>
+                </div> 
+
+
+                <div fxFlex="100"  class="pr-1">
+        
+                  <quill-editor
+                  [formControl]="itemForm.controls['seo_metadescription']"
+                  theme="snow" 
+                  [(ngModel)]="metaDescription" 
+                  
+                  ></quill-editor>
+            
+                </div>
+               
+     
+
+                  <div fxFlex="50"  class="pr-1" style="margin-top: 90px;">
+                      <mat-form-field class="full-width">
+                        <input
+                        matInput
+                        name="seo_metaheading"
+                        [formControl]="itemForm.controls['seo_metaheading']"
+                        placeholder="MetaHeading">
+                      </mat-form-field>
+                    </div> 
+
+                    <div fxFlex="100"  class="pr-1">
+        
+                      <quill-editor
+                      [formControl]="itemForm.controls['seo_metaheadingdescription']"
+                      theme="snow" 
+                      [(ngModel)]="metaHeadingDescription" 
+                      
+                      ></quill-editor>
+                
+                    </div>
+                   
+                      <div fxFlex="50"  class="pr-1" style="margin-top: 90px;">
+                          <mat-form-field class="example-full-width">
+                              <textarea matInput placeholder="Keywords"  [formControl]="itemForm.controls['seo_keywords']"></textarea>
+                            </mat-form-field>
+                          </div>
 
              
 
