--- a/src/app/views/products/categories/categories-table-popup/categories-table-popup.component.html
+++ b/src/app/views/products/categories/categories-table-popup/categories-table-popup.component.html
@@ -8,6 +8,7 @@
         matInput
         name="username"
         [formControl]="itemForm.controls['name']"
+        (input)="onSearchChange($event.target.value)"
         placeholder="Name">
       </mat-form-field>
     </div>
@@ -31,6 +32,7 @@
       <mat-form-field>
         <mat-label>Parent Category</mat-label>
         <mat-select [formControl]="itemForm.controls['parentcategory']" >
+       
           <mat-option *ngFor="let topping of parentCategory" [value]="topping">{{topping}}</mat-option>
         </mat-select>
       </mat-form-field>
