--- a/src/app/views/products/tags/tags-table-group/tags-table-group.component.html
+++ b/src/app/views/products/tags/tags-table-group/tags-table-group.component.html
@@ -10,6 +10,7 @@
         matInput
         name="username"
         [formControl]="itemForm.controls['name']"
+        (input)="onSearchChange($event.target.value)"
         placeholder="Name">
       </mat-form-field>
     </div>
