--- a/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
+++ b/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
@@ -1,3 +1,5 @@
+<mat-icon aria-hidden="false" aria-label="Example home icon" (click)="dialogRef.close(false)" class="closeiconall" style="top: -10; left:
+0;position:absoloute;cursor: pointer;">cancel</mat-icon>
 <h1 matDialogTitle>{{ data.title }}</h1>
 
 <form [formGroup]="itemForm" (ngSubmit)="submit($event)">
