--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -1,3 +1,5 @@
+<mat-icon aria-hidden="false" aria-label="Example home icon" (click)="dialogRef.close(false)" class="closeiconall" style="top: -10; left:
+0;position:absoloute;cursor: pointer;">cancel</mat-icon>
 <h1 matDialogTitle>{{ data.title }}</h1>
 
 <form [formGroup]="itemForm" (ngSubmit)="submit($event)">
@@ -24,17 +26,23 @@
       </mat-form-field>
     </div>
 
-
     <div fxFlex="50" class="pr-1">
-
-      <mat-form-field [style.width.px]=300>
-        <mat-label>Tags</mat-label>
-        <mat-select [formControl]="itemForm.controls['tags']" multiple>
-          <mat-option *ngFor="let topping of tags" [value]="topping">{{topping}}</mat-option>
+      <mat-form-field [style.width.px]=427>
+        <mat-select [formControl]="bankMultiCtrl" placeholder="Districts" [multiple]="true" #multiSelect>
+          <ngx-mat-select-search [formControl]="bankMultiFilterCtrl"
+          
+          placeholderLabel="Find Tags..." 
+          noEntriesFoundLabel="No matching tag found"
+          ></ngx-mat-select-search>
+          <mat-option *ngFor="let bank of filteredBanksMulti | async" [value]="bank">
+            {{bank.name}}
+          </mat-option>
         </mat-select>
       </mat-form-field>
-
     </div>
+    
+
+
 
 
     <div fxFlex="50" class="pr-1">
