--- a/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
+++ b/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
@@ -1,5 +1,8 @@
+<mat-icon aria-hidden="false" aria-label="Example home icon" (click)="dialogRef.close(false)" class="closeiconall" style="top: -10; left:
+0;position:absoloute;cursor: pointer;">cancel</mat-icon>
 <h1 matDialogTitle>{{data.title}}</h1>
-{{"ADD" | translate }} {{"PRODUCT" | translate }}
+
+
   <form [formGroup]="itemForm" (ngSubmit)="submit()">
  <div fxLayout="row wrap" fxLayout.lt-sm="column">
 
