--- a/src/app/views/pages/topheader/topheader.component.html
+++ b/src/app/views/pages/topheader/topheader.component.html
@@ -84,7 +84,7 @@
     <mat-tab label="Profile Picture">
       <mat-card-content>
         <div class="mb-1 mt-1">
-          <p>Upload a profile picture</p>
+          <p>Upload Picture </p>
           <input type="file" ng2FileSelect [uploader]="uploader" />
         </div>
 
@@ -154,25 +154,28 @@
     </mat-tab>
     <mat-tab label="Privacy Settings">
       <mat-card-content>
-        <div class="mb-1 mt-1">
-          <mat-checkbox> Get weekly news in your email.</mat-checkbox>
-        </div>
-        <div class="mb-1">
-          <mat-checkbox> Get notification when someone follows you.</mat-checkbox>
-        </div>
-        <div class="mb-1">
-          <mat-checkbox> Get email when someone follows you.</mat-checkbox>
-        </div>
-        <div class="mb-1">
-            <p>Choose your admin panel color schemes.</p>
-            <mat-radio-group fxLayout="column" fxLayoutGap="4px">
-              <mat-radio-button value="indigo">Indigo</mat-radio-button>
-              <mat-radio-button value="blue">Blue</mat-radio-button>
-              <mat-radio-button value="pink">Pink</mat-radio-button>
-              <mat-radio-button value="purple">Purple</mat-radio-button>
-            </mat-radio-group>
-        </div>
-        <button mat-raised-button color="primary">Save</button>
+        <mat-form-field class="full-width">
+                <input
+                matInput
+                name="title"
+                placeholder="Old Password"
+                value=""
+                [(ngModel)]="oldpassword"
+              
+                >
+              </mat-form-field>
+              <mat-form-field class="full-width">
+                <input
+                matInput
+                name="title"
+                placeholder="New Password"
+                value=""
+              [(ngModel)]="newpassword"
+                >
+              </mat-form-field>
+        
+     
+        <button mat-raised-button color="primary"(click)="Changepassword()" >Update</button>
       </mat-card-content>
     </mat-tab>
   </mat-tab-group>
