--- a/src/app/views/users/manageenquiries/managenquiriespopup/managenquiriespopup.component.html
+++ b/src/app/views/users/manageenquiries/managenquiriespopup/managenquiriespopup.component.html
@@ -77,7 +77,7 @@
     <div fxFlex="100" class="mt-1">
       <button mat-raised-button color="primary" type="submit" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
       <span fxFlex></span>
-      <button mat-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
+      <button mat-raised-button color="warn" type="button" (click)="dialogRef.close(false)" style="margin-left: 90px;">Cancel</button>
     </div>
   </div>
   </form>
