--- a/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
+++ b/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
@@ -95,13 +95,8 @@ Requirements
         [disabled]="itemForm.invalid" >
         {{ "SAVE" | translate }} </button>
       <span fxFlex></span>
-      <button
-        mat-button
-        color="warn"
-        type="button"
-        (click)="dialogRef.close(false)" >
-        Cancel
-      </button>
+      <button mat-raised-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
+
     </div>
   
   </div>
