--- a/src/app/views/pages/managebanner/bannerpopup/bannerpopup.component.html
+++ b/src/app/views/pages/managebanner/bannerpopup/bannerpopup.component.html
@@ -56,7 +56,7 @@
     <div fxFlex="100" class="mt-1" style="margin-top: 90px;">
       <button mat-raised-button color="primary" type="submit" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
       <span fxFlex></span>
-      <button mat-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
+      <button mat-raised-button color="warn" type="button" (click)="dialogRef.close(false)" style="margin-left: 90px;">Cancel</button>
     </div>
   </div>
   </form>
