--- a/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
+++ b/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
@@ -47,7 +47,7 @@
     </div>
     <div fxFlex="100" class="pr-1" style="margin-top: 150px;">
       <mat-form-field [style.width.px]=427>
-        <mat-select [formControl]="bankMultiCtrl" placeholder="Districts" [multiple]="true" #multiSelect>
+        <mat-select [formControl]="bankMultiCtrl" placeholder="Tags" [multiple]="true" #multiSelect>
           <ngx-mat-select-search [formControl]="bankMultiFilterCtrl"
           
           placeholderLabel="Find Tags..." 
@@ -222,7 +222,7 @@
               <div fxFlex="100"class="pr-1" style="margin-top: 130px;">
                 <button mat-raised-button color="primary" type="submit" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
                 <span fxFlex></span>
-                <button mat-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
+                <button mat-raised-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
               </div>
      
   
