--- a/src/app/views/products/tags/tags-table-group/tags-table-group.component.html
+++ b/src/app/views/products/tags/tags-table-group/tags-table-group.component.html
@@ -46,7 +46,7 @@
     <div fxFlex="100" class="mt-1">
       <button mat-raised-button color="primary" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
       <span fxFlex></span>
-      <button mat-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
+      <button mat-raised-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
     </div>
   </div>
   </form>
